# takumi-html-ffi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
bindings/takumi-render-uniffi/: .gitignore  Cargo.toml  README.md  uniffi.toml
bindings/takumi-render-uniffi/csharp/Takumi.Render.UniFFI/: Models.cs  NativeLibraryBootstrap.cs  Renderer.cs  Takumi.Render.UniFFI.csproj  TemplateEngine.cs
bindings/takumi-render-uniffi/csharp/Takumi.Render.UniFFI.Tests/: RendererTests.cs  Takumi.Render.UniFFI.Tests.csproj
bindings/takumi-render-uniffi/examples/: render_jinja_markdown_article.rs  render_markdown_blog_post.rs
bindings/takumi-render-uniffi/jvm/: build.gradle.kts  settings.gradle.kts
bindings/takumi-render-uniffi/jvm/src/main/kotlin/io/github/zhjk/takumi/render/uniffi/: Models.kt  Renderer.kt  TemplateEngine.kt
bindings/takumi-render-uniffi/jvm/src/test/java/io/github/zhjk/takumi/render/uniffi/: RendererJavaTest.java
bindings/takumi-render-uniffi/scripts/: prepare_packaged_bindings.py
bindings/takumi-render-uniffi/src/: api.rs  cache.rs  error.rs  lib.rs  markdown.rs  renderer.rs  template.rs
bindings/takumi-render-uniffi/tests/: rendering.rs
examples/assets/: markdown-base.scss
examples/assets/jinjaMarkdownArticle/: index.jinja.md  styles.css  styles.scss
examples/assets/markdownBlogPost/: index.md  styles.css  styles.scss
src/: lib.rs
src/html/: convert.rs  emoji.rs  metadata.rs  mod.rs  options.rs  parser.rs  resource.rs  style.rs
