[package]
name = "takumi-html"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
ego-tree = "0.11.0"
html5ever = "0.39.0"
minijinja = "2.12"
mime_guess = "2.0.5"
scraper = "0.27.0"
serde = { version = "1", features = ["derive"] }
takumi = { version = "1.4.1", features = ["svg", "rayon"] }
unicode-segmentation = "1.12"

[dev-dependencies]
tempfile = "3.13"
