[package]
name = "takumi-html"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
ego-tree = "0.11"
html5ever = "0.39"
minijinja = "2.20"
mime_guess = "2.0.5"
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
takumi = { version = "1.5.0", features = ["svg", "rayon"] }
unicode-segmentation = "1.13"

[dev-dependencies]
tempfile = "3.13"
