[package]
name = "takumi-render-uniffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
minijinja = "2.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
takumi = { version = "1.4.1", features = ["svg", "rayon"] }
takumi-html = { path = "../.." }
thiserror = "2.0"
uniffi = "0.29.5"

[dev-dependencies]
tempfile = "3.13"
