[package]
name = "takumi-render-uniffi"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "webp", "jpeg", "rayon"] }
minijinja = { version = "2.20", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.13"
chrono = "0.4"
syntect = { version = "5", features = ["html"] }

takumi = { version = "1.5.0", features = ["svg", "rayon"] }
takumi-html = { path = "../.." }
thiserror = "2.0"
uniffi = "0.29.5"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
codegen-units = 1
lto = true
strip = true