[package]
name = "takumi-render-uniffi"
version = "0.2.3"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "webp", "jpeg", "rayon"] }
comrak = { version = "0.52", features = ["syntect"] }
minijinja = { version = "2.20", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
syntect = { version = "5", features = ["html"] }

takumi = { version = "1.6.0", features = ["svg", "rayon"] }
takumi-html = { path = "../.." }
thiserror = "2.0"
uniffi = "0.29.5"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
codegen-units = 1
lto = true
